Fix bases and outlines sections not properly collapsing in Chrome and Safari

--- a/src/BasesSection.module.css
+++ b/src/BasesSection.module.css
@@ -75,9 +75,9 @@
 .collapsable-content {
   margin-top: 16px;
 
-  visibility: collapse;
+  display: none;
 }
 
 .open .collapsable-content {
-  visibility: visible;
+  display: block;
 }
